# job-application-agent

./: .env.example  .gitignore  LICENSE  README.md  applications.py  config.py  docker-compose.prod.yml  docker-compose.yml  fix_project_errors.sh  fix_summary.md  project_manager.sh  requirements-dev.txt  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  (+5 more)
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  application.py  application_history.py  document.py  job.py  user.py
backend/app/schemas/: __init__.py  document.py  job.py  user.py
backend/app/services/: __init__.py  application_manager.py  application_service.py  document_service.py  job_service.py  notification_service.py
backend/app/templates/: __init__.py  cover_letter_template.py  resume_template.py
backend/app/utils/: __init__.py  encryption.py  file_handling.py  text_processing.py  validation.py
backend/tests/: conftest.py
backend/tests/integration/: __init__.py  test_applications_api.py  test_auth_api.py  test_database.py  test_documents_api.py  test_end_to_end.py  test_jobs_api.py  test_performance.py  test_security.py  test_users_api.py
backend/tests/unit/: __init__.py  test_application_manager.py  test_document_service.py  test_helpers_utilities.py  test_job_service.py  test_llm_services.py  test_notification_service.py  test_scrapers.py  test_user_service.py  test_utilities.py
(+58 files in other folders)
